--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>Aulas de Inglês Online</title>
+    <!--FAVICON-->
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+    <title>Aulas de idiomas Online</title>
 </head>
 
 <body>
