Ajuste do botão

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 Aprenda romeno comigo, uma professora nativa do país. Você desenvolverá fluência e confiança em situações reais, além de poder começar ou aprimorar seu alemão.
                             </div>
                             <div class="btn">
-                                <a href="https://api.whatsapp.com/send?phone=5511984607661">Read more</a>
+                                <a href="https://api.whatsapp.com/send?phone=5511984607661">Saiba Mais</a>
                             </div>
                         </div>
                     </div>
