--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!--ANIMAÇÃO-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--FAVICON-->
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     <title>Aulas de idiomas Online</title>
@@ -64,7 +67,7 @@
         <div class="fundo">
             <section class="primeira-sessão" id="primeira-sessão">
                 <div class="primeira-grid">
-                    <div id="item-text-0">&nbsp;
+                    <div id="item-text-0"  data-aos="fade-right" data-aos-duration="1000">&nbsp;
                         <div class="position">
                             <p class="p-primeira-sessão">Olá, eu sou a Tina, sua professora particular de inglês!
                                 Estou aqui para guiá-lo em uma emocionante jornada de aprendizado, levando-o do
@@ -80,7 +83,7 @@
                         </div>
                     </div>
                     <div id="item-img-1">&nbsp;
-                        <img src="img/boneco1.png" alt="" class="img">
+                        <img src="img/boneco1.png" alt="" class="img" data-aos="fade-left" data-aos-duration="1000">
                     </div>
             </section>
         </div>
@@ -90,17 +93,17 @@
         <div class="fundo">
             <section class="segunda-sessão" id="segunda-sessão">
                 <div class="angry-grid">
-                    <div id="item-metodologia-p-1">&nbsp;
-                        <h2 class="titulo-primeira-sessão">METODOLOGIA</h2>
+                    <div id="item-metodologia-p-1"  >&nbsp;
+                        <h2 class="titulo-primeira-sessão" data-aos="fade-up" data-aos-duration="1000">METODOLOGIA</h2>
                         <p class="p-segunda-sessão">Comigo, você terá a oportunidade de desenvolver todas as
                             habilidades
                             essenciais: fala, audição, leitura e escrita.</p>
 
-                        <img class="books" src="img/books.png" alt="">
+                        <img class="books" src="img/books.png" alt="" data-aos="fade-down" data-aos-duration="1000">
                     </div>
-                    <div id="item-metodologia-p-2">&nbsp;
-                        <div class="Boneco_Comunicacao"> <img src="img/informativo1.png" alt=""></div>
-                        <p class="p-segunda-sessão-pdl">Além do inglês, você também pode praticar o alemão e o
+                    <div id="item-metodologia-p-2" >&nbsp;
+                        <div class="Boneco_Comunicacao" data-aos="fade-up" data-aos-duration="1000"> <img src="img/informativo1.png" alt=""></div>
+                        <p class="p-segunda-sessão-pdl" data-aos="fade-up" data-aos-duration="1000">Além do inglês, você também pode praticar o alemão e o
                             romenocomigo.
                             <br><br> Como professora versátil e experiente, estou à disposição para ajudá-lo a
                             aprimorar suas
@@ -117,7 +120,7 @@
             <section class="pratique-desenvolva">
                 <h2 class="titulo-sessão">PRATIQUE E DESENVOLVA</h2>
                 <div class="container">
-                    <div class="card">
+                    <div class="card" data-aos="fade-left" data-aos-duration="1000">
                         <div class="img">
                             <img src="img/retrato-de-jovens-com-balao-de-pensamento.jpg">
                         </div>
@@ -129,7 +132,7 @@
                                 Pratique sua fala
                             </p>
                         </div>
-                        <div class="bottom-text">
+                        <div class="bottom-text" >
                             <div class="text">
                                 Nessas aulas colocamos em prática o que voçê já sabe e melhoramos vocabulário e
                                 pronúncia, tornando sua comunicação eficaz e confiante em várias situações.
@@ -139,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="fade-up" data-aos-duration="1000">
                         <div class="img">
                             <img src="img/estadosunidos3.jpg">
                         </div>
@@ -161,7 +164,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="fade-right" data-aos-duration="1000">
                         <div class="img">
                             <img src="img/bandeira-nacional-no-topo-da-colina-em-brasov-ao-por-do-sol-na-romenia.jpg">
                         </div>
@@ -193,11 +196,11 @@
         <div class="fundo">
             <section class="terceira-sessão" id="terceira-sessão">
                 <div class="money-grid">
-                    <div id="money-0">&nbsp;
+                    <div id="money-0" data-aos="fade-up" data-aos-duration="1000">&nbsp;
                         <img src="img/money 2.png" alt="">
                     </div>
                 </div>
-                <div class="planos-grid">
+                <div class="planos-grid" data-aos="fade-up" data-aos-duration="1000">
                     <div id="conve-0">&nbsp;
                         <div class="conteudo">
                             <h2 class="plano-titulo">Conversação</h2>
@@ -219,7 +222,7 @@
 
                         </div>
                     </div>
-                    <div id="inglês-1">&nbsp;
+                    <div id="inglês-1" data-aos="fade-left" data-aos-duration="1000">&nbsp;
                         <div class="conteudo">
                             <h2 class="plano-titulo">Inglês</h2>
                             <p class="plano-texto">
@@ -241,7 +244,7 @@
 
                         </div>
                     </div>
-                    <div id="alemao-2">&nbsp;
+                    <div id="alemao-2" data-aos="fade-rigth" data-aos-duration="1000">&nbsp;
                         <div class="conteudo">
                             <h2 class="plano-titulo">Alemão</h2>
                             <p class="plano-texto alemao">
@@ -345,11 +348,9 @@
 
 
     </main>
-
-
-
-
-
+    <script>
+        AOS.init();
+      </script>
     <script src="js/cdn.jsdelivr.net_npm_swiper@10.3.0_swiper-bundle.js"></script>
     <script src="js/javascript.js"></script>
 </body>
