ajuste de texto

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                 </p>
                                 <i class="bx bxs-quote-alt-left quote-icon"></i>
                                 <div class="details">
-                                    <span class="name">Marnie Lotter</span>
+                                    <span class="name">Stella Beatriz</span>
                                 </div>
                             </div>
                             <div class="slide swiper-slide">
